tests/ui/lazy-type-alias/variance-1.stderr
error[E0392]: lifetime parameter `'a` is never used
  --> $DIR/variance-1.rs:17:20
   |
LL | struct WrapDiscard<'a, T>(Discard<'a, T>);
   |                    ^^ unused lifetime parameter
   |
   = help: consider removing `'a`, referring to it in a field, or using a marker such as `PhantomData`

error[E0392]: type parameter `T` is never used
  --> $DIR/variance-1.rs:17:24
   |
LL | struct WrapDiscard<'a, T>(Discard<'a, T>);
   |                        ^              - `T` is named here, but is likely unused in the containing type
   |                        |
   |                        unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
